--- a/quick-demo/gradle.properties
+++ b/quick-demo/gradle.properties
@@ -1,3 +1,4 @@
-org.gradle.parallel=false
-org.gradle.workers.max=4
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.workers.max=8
 gradle.internal.testdistribution.writeTraceFile=true
